[package]
name = "crawlcomply-crawl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "env"] }
spider = { version = "1.46.3", features = ["budget"] }
warp = "0.3.6"
